--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buubleGamet</title>
     <link rel="stylesheet" href="style.css">
-   
+
 </head>
 
 <body>
+    <div class="rule">
+        <h2>Game Instruction</h2>
+        <p class="one"> 1. Click the <b>"Start"</b> button to begin; bubbles will appear with random numbers.</p>
+        <p class="two"> 2. Click on the bubbles to score points before the timer reaches 0.</p>
+        <p class="three">3. When time is up, the <b>"Start"</b> button activates again to restart the game.</p>
+
+    </div>
     <div class="contaner">
         <div class="top">
             <div class="ele">
